# NSU_Education

./: README.md
CarFactory/: build.gradle  settings.gradle
Chat/client/: pom.xml
CsvParser/src/: Main.java
StackCalculator/: Config.txt  build.gradle  settings.gradle
StackCalculator/src/: CalculatorLog.txt
circular_buffer/: CMakeLists.txt  main.cpp
circular_buffer/circular_buffer/: circular_buffer.cpp  circular_buffer.h
cpp_labs/: README.md
cpp_labs/circular_buffer/: README.md
cpp_labs/game_life/: README.md  my_life
cpp_labs/pars_csv/: CMakeLists.txt  README.md  a.out
cpp_labs/tuples/: CMakeLists.txt  README.md
cpp_labs/wav_file/: README.md
game_life/: CMakeLists.txt  main.cpp
game_life/controller/: controller.cpp  controller.h
game_life/model/: model.cpp  model.h
game_life/view/: view.h
java_labs/: README.md
java_labs/CarFactory/: README.md
java_labs/Chat/: README.md
java_labs/CsvParser/: README.md  output.csv
java_labs/StackCalculator/: README.md
java_labs/Tetris/: PlayerStatistics.txt  README.md  pom.xml
lab0/: input.txt  module1.cpp  output.csv
lab1/: input1.txt  test.csv
lab1/src/: Main.java  stringBuilder.java
lab3/: CMakeLists.txt  main.cpp
lab3/app_logic/: App.cpp  App.h
lab3/converters/: Converters.cpp  Converters.h
lab3/factory/: ConvertersFactory.h
networks/: .gitignore  README.md  firstTask.py
os/: .gitignore
os/lab3/: main.c  (+1 more)
pars_csv/: README.md  main.cpp
statistics_and_probability/: config.py  main.py  normSample.txt  uniformSample.txt
tuples/: main.cpp
wav_file/: CMakeLists.txt  main.cpp
(+189 files in other folders)
